Fixed button layouts using css instead of a wrapped container.

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -298,6 +298,9 @@ aside {
 .btn {
   transition: background-color 0.25s ease;
   max-width: 25em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn-secondary {
